# data-engineering-bootcamp

./: .gitignore
00-bootcamp-project/: load_data_to_bigquery.py  load_data_to_gcs_then_bigquery.py  main-sftp.py  main.py  pyproject.toml
00-bootcamp-project/dags/: greenery_addresses_data_pipeline.py  greenery_events_data_pipeline.py  greenery_order_items_data_pipeline.py  greenery_orders_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py  greenery_users_data_pipeline.py  users-2020-03-08.csv
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: dogs.json  extract.py  load.sh  requirements.txt
02-data-warehouse-and-google-bigquery/examples/loading-data-to-bigquery-from-local/: dataengineerbootcamp-d381ea548db3.json  load_table_from_dataframe.py
03-data-lake-with-google-cloud-storage/examples/uploading-to-gcs/: main-gold.py  price.csv  pyproject.toml
04-data-pipelines-with-apache-airflow/dags/: every_8_30_tuesdays.py  every_month_day_3_18_00.py  everyday.py  everymonday.py  everymonth.py  my_first_dag.py  play_with_airflow_connections_and_hooks.py  play_with_templating.py  task_dependencies.py
05-analytics-engineering/scheduling-dbt/dags/: greenery_dbt_dag.py
05-analytics-engineering/workshop/: pyproject.toml
05-analytics-engineering/workshop/greenery/: profiles.yml
07-end-to-end-project/dags/: networkrail_dbt_dag.py  networkrail_movements_to_gcs_and_then_bigquery.py
07-end-to-end-project/dbt/: .user.yml  profiles.yml
07-end-to-end-project/dbt/networkrail/: dbt_project.yml
(+23 files in other folders)
